# modak

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
src/main/include/models/: UpStatus.hpp
src/main/include/utils/: Constants.hpp  Logger.hpp
